--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -29,15 +29,15 @@
                     <a class="nav-link" href="{% url 'followers' %}">Abonnements</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Se Deconectare</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Deconnecter</a>
                 </li>
                 <!-- {% else %} -->
                 <!-- Afișează opțiunile de autentificare dacă nu este autentificat -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Autentificare</a>
+                    <a class="nav-link" href="{% url 'login' %}">S'identifier</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Înregistrare</a>
+                    <a class="nav-link" href="{% url 'register' %}">S'enregistrer</a>
                 </li>
                 <!-- {% endif %} -->
             </ul>
