--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,7 +3,8 @@
 {% load static %}
 {% block content %}
 
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati atque, sapiente incidunt fugiat a, iusto
+    voluptates possimus ducimus quaerat quisquam nemo voluptas labore quia pariatur fuga culpa maxime? Vitae, odit?</p>
 
-<p>Utilizator conectat: {{ user }}</p>
 
 {% endblock content %}
