--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -18,7 +18,7 @@
                 Submit
             </button>
             {% endbuttons %}
-            <p>Don't have an account? <a href="{%url 'login' %}">Login</a></p>
+            <p>Vous avez deja un compte? <a href="{%url 'login' %}">Login</a></p>
         </div>
     </form>
 
