--- a/app/templates/app/posts.html
+++ b/app/templates/app/posts.html
@@ -4,24 +4,108 @@
 {# Load the tag library #}
 {% load bootstrap5 %}
 
-Bună, {{ user}}
-
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
 {# Display a form #}
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <h2 class=" text-center">Tickets Créé</h2>
+            <table class="table table-bordered">
+                <tbody>
+                    {% for ticket in tickets %}
+                    <tr>
+                        <th scope="row">{{ticket}}</th>
+                        <td class="text-center">
+                            <form action="{% url 'tickets' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="ticket" value="{{ticket.id}}">
+                                <input type="hidden" name="form_type" value="delete">
+                                <button type="submit" class="btn-danger">Delete</button>
+                            </form>
+                        </td>
+                        <td class="text-center">
+                            <form action="{% url 'tickets' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="ticket" value="{{ticket.id}}">
+                                <input type="hidden" name="form_type" value="update">
+                                <button type="submit" class="btn-primary">Modifier</button>
+                            </form>
+                        </td>
 
-<div class="d-flex justify-content-center align-items-center" style="height: 40vh;">
-    <div class="container">
-        <form method="post" action="">
-            {% csrf_token %}
-            <div class="form-group d-flex justify-content-center">
-                <button type="submit" value="form1" class="btn btn-primary btn-margin">Creer un Ticket</button>
-                <button type="submit" value="form1" class="btn btn-primary">Creer un Review</button>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <div class="container " id="ticket_form">
+                <h3 class=" text-center">Creer un Ticket</h3>
+                <form action="{% url 'tickets' %}" name="" method="post" enctype="multipart/form-data"
+                    class="form mx-auto border">
+                    <div class="row">
+                        <div class="text-center">
+                            {% csrf_token %}
+                            {% bootstrap_form ticket_form %}
+                            {% buttons %}
+                            <button type="submit" class="btn btn-primary">
+                                Valider
+                            </button>
+                            {% endbuttons %}
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+            <div class="container " id="review_form">
+                <h3 class="text-center">Creer un Review</h3>
+                <form action="{% url 'tickets' %}" name="" method="post" enctype="multipart/form-data"
+                    class="form mx-auto border ">
+                    <div class="row">
+                        <div class="text-center">
+                            {% csrf_token %}
+                            {% bootstrap_form review_form %}
+                            {% buttons %}
+                            <button type="submit" class="btn btn-primary">
+                                Valider
+                            </button>
+                            {% endbuttons %}
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2 class=" text-center">Reviews Créé</h2>
+            <table class="table table-bordered">
+                <tbody>
+                    {% for review in reviews %}
+                    <tr>
+                        <th scope="row">{{review}}</th>
+                        <td class="text-center">
+                            <form action="{% url 'tickets' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="review" value="{{review.id}}">
+                                <input type="hidden" name="form_type" value="delete">
+                                <button type="submit" class="btn-danger">Delete</button>
+                            </form>
+                        </td>
+                        <td class="text-center">
+                            <form action="{% url 'tickets' %}" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="review" value="{{review.id}}">
+                                <input type="hidden" name="form_type" value="update">
+                                <button type="submit" class="btn-primary">Modifier</button>
+                            </form>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
+</div>
 </div>
 
 
