--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="#">Flux</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'tickets' %}">Posts</a>
+                    <a class="nav-link" href="{% url 'posts' %}">Posts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'followers' %}">Abonnements</a>
