--- a/app/templates/app/posts.html
+++ b/app/templates/app/posts.html
@@ -43,7 +43,7 @@
         <div class="col-md-4">
             <div class="container " id="ticket_form">
                 <h3 class=" text-center">Creer un Ticket</h3>
-                <form action="{% url 'tickets' %}" name="" method="post" enctype="multipart/form-data"
+                <form action="{% url 'tickets' %}" method="post" enctype="multipart/form-data"
                     class="form mx-auto border">
                     <div class="row">
                         <div class="text-center">
@@ -60,8 +60,7 @@
             </div>
             <div class="container " id="review_form">
                 <h3 class="text-center">Creer un Review</h3>
-                <form action="{% url 'tickets' %}" name="" method="post" enctype="multipart/form-data"
-                    class="form mx-auto border ">
+                <form action="" method="post" enctype="multipart/form-data" class="form mx-auto border ">
                     <div class="row">
                         <div class="text-center">
                             {% csrf_token %}
