--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -9,7 +9,7 @@
 
 {# Display a form #}
 
-<div class="d-flex justify-content-center align-items-center" style="height: 60vh;">
+<div class="d-flex justify-content-center align-items-center" >
     <form action="{% url 'login' %}" method="post" class="form mx-auto">
         <div class="text-center">
             {% csrf_token %}
