--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -1,10 +1,10 @@
-body {
+body, main, html {
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(196, 120, 12)), url("../images/librarie.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center bottom;
     /* Ajustează poziția imaginii */
-    height: 100vh;
+    height: 100%;
 }
 
 
@@ -16,7 +16,11 @@ body {
 }
 
 .followers {
-    top: 20%;
+    top: 15%;
+    position: absolute;
+}
+
+.posts{
     position: absolute;
 }
 
