--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,6 +1,6 @@
 {% load bootstrap5 %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light bg">
     <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="#">LITEREVU</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
