--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -15,7 +15,7 @@
                     <span class="nav-link">Bonjour, {{ user.username }}</span>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Flux</a>
+                    <a class="nav-link" href="{% url 'flux' %}">Flux</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'posts' %}">Posts</a>
