--- a/app/templates/app/posts.html
+++ b/app/templates/app/posts.html
@@ -62,6 +62,7 @@
                 <h4 class="mb-3 text-primary text-center">Creer un Review</h4>
                 <form action="{% url 'reviews' %}" method="post" enctype="multipart/form-data"
                     class="form mx-auto border ">
+                    <input type="hidden" name="form_type" value="create">
                     <div class="row">
                         <div class="text-center">
                             {% csrf_token %}
